--- a/cyber-reports/package.json
+++ b/cyber-reports/package.json
@@ -2,14 +2,16 @@
   "name": "cyber-reports",
   "version": "0.1.0",
   "private": true,
+  "basePath": "https://github.com/henriqueolivgp/CyberReports/tree/main/cyber-reports",
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build": "next build && next export",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
-    "flowbite-react": "^0.10.2",
+    "lucide-react": "^0.476.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -21,6 +23,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
+    "gh-pages": "^6.3.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
