--- a/cyber-reports/package.json
+++ b/cyber-reports/package.json
@@ -11,6 +11,7 @@
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
+    "framer-motion": "^12.4.7",
     "lucide-react": "^0.476.0",
     "next": "15.1.7",
     "react": "^19.0.0",
