--- a/cyber-reports/package.json
+++ b/cyber-reports/package.json
@@ -11,11 +11,12 @@
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.5",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.476.0",
     "next": "15.1.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
