--- a/cyber-reports/package.json
+++ b/cyber-reports/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev --turbopack",
     "start": "next start",
     "lint": "next lint",
-    "build": "next build && next export",
+    "build": "next build",
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
