remove gh-pages

--- a/cyber-reports/package.json
+++ b/cyber-reports/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "build": "next build",
-    "deploy": "gh-pages -d out"
+    "deploy": "gh-pages -d out",
+    "pages:build": "npx @cloudflare/next-on-pages"
   },
   "dependencies": {
     "@react-spring/web": "^9.7.5",
@@ -19,13 +20,13 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.10",
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "gh-pages": "^6.3.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
