--- a/cyber-reports/package.json
+++ b/cyber-reports/package.json
@@ -19,6 +19,7 @@
     "next": "15.1.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-toastify": "^11.0.5",
     "split-type": "^0.3.4"
   },
   "devDependencies": {
