--- a/cyber-reports/package.json
+++ b/cyber-reports/package.json
@@ -20,7 +20,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-toastify": "^11.0.5",
-    "split-type": "^0.3.4"
+    "split-type": "^0.3.4",
+    "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.10",
