--- a/API/package.json
+++ b/API/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx tsx scr/server.ts"
+    "start": "tsx watch src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,16 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
-    "prisma": "^6.5.0"
+    "@fastify/cookie": "^11.0.2",
+    "@fastify/cors": "^11.0.1",
+    "@fastify/swagger": "^9.4.2",
+    "@fastify/swagger-ui": "^5.2.2",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.7",
+    "fastify": "^5.2.2",
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^6.5.0",
+    "uuid": "^11.1.0",
+    "zod": "^3.24.2"
   }
 }
