--- a/API/package.json
+++ b/API/package.json
@@ -5,26 +5,33 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsx watch src/server.ts"
+    "start": "npx tsx watch src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/fastify-multipart": "^0.5.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.11",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.779.0",
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.0.1",
+    "@fastify/multipart": "^9.0.3",
     "@fastify/swagger": "^9.4.2",
     "@fastify/swagger-ui": "^5.2.2",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.2",
+    "fastify-multer": "^2.0.3",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.13.1",
     "prisma": "^6.5.0",
     "uuid": "^11.1.0",
     "zod": "^3.24.2"
