--- a/API/package.json
+++ b/API/package.json
@@ -26,13 +26,14 @@
     "@fastify/multipart": "^9.0.3",
     "@fastify/swagger": "^9.4.2",
     "@fastify/swagger-ui": "^5.2.2",
+    "@prisma/client": "^7.0.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.2",
     "fastify-multer": "^2.0.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
-    "prisma": "^6.5.0",
+    "prisma": "^6.19.0",
     "uuid": "^11.1.0",
     "zod": "^3.24.2"
   }
